# robotframework-excel

./: .gitignore  .travis.yml  Jenkinsfile  LICENSE  README.adoc  README.md  build.md  pyproject.toml  requirements.test.txt  requirements.txt  setup.py  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
ExcelRobot/: __init__.py  base.py  reader.py  utils.py  version.py  writer.py
antora/: pg-changelog.adoc
antora/modules/ROOT/: nav.adoc
antora/modules/ROOT/pages/: index.adoc
antora/robotframework-excel/: antora.yml
antora/robotframework-excel/modules/ROOT/attachments/keywords/: ExcelRobot.html
antora/robotframework-excel/modules/ROOT/pages/: index.adoc
docs/: ChangeLog.txt  ExcelRobot-KeywordDocumentation.html  ExcelRobot.html  antora.yml  release-notes.md
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: pg-changelog.adoc  pg-copyright-and-license.adoc
tests/acceptance/: ExcelRobotTest.robot
tests/data/: ExcelRobotTest.xls  ExcelRobotTest.xlsx
tests/unit/: test_data_format.py  test_reader.py  test_writer.py
